<resources>
    <string name="app_name">Health Inspection Report Finder</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="report_details">Inspection Report Details</string>
    <string name="data_read_error_msg">Sorry, there was an error reading restaurant data.</string>
    <string name="no_inspection_reports">No inspection reports.</string>
    <string name="restaurant_list_hazard_level">Hazard: %1$s</string>
    <string name="n_days_ago">%1$d days ago</string>
    <string name="last_inspection">Last inspection:\u0020</string>
    <string name="restaurant_list_num_critical">Critical Issues:\u0020</string>
    <string name="restaurant_list_num_noncritical">Non-Critical Issues:\u0020</string>
    <string name="issues_found">Issues Found:\u0020</string>
    <string name="days_ago">\u0020days ago</string>
    <string name="inspection_date">Inspection Date:\u0020</string>
    <string name="inspection_reports">Inspection Reports:</string>
    <string name="none">None.</string>
    <string name="date_inspection_report">%1$s Inspection Report</string>
    <string name="report_type">Report Type:\u0020</string>
    <string name="type">Type:\u0020</string>
    <string name="critical">Critical</string>
    <string name="not_critical">Not Critical</string>
    <string name="short_desc_101">Non-accordance with regulation</string>
    <string name="short_desc_102">Operation on unapproved premises</string>
    <string name="short_desc_103">Failure to hold valid permit</string>
    <string name="short_desc_104">Permit not posted conspicuously</string>
    <string name="short_desc_201">Food contaminated</string>
    <string name="short_desc_202">Food processed in unsafe manner</string>
    <string name="short_desc_203">Food not cooled safely</string>
    <string name="short_desc_204">Food not cooked/reheated safely</string>
    <string name="short_desc_205">Potentially hazardous cold food</string>
    <string name="short_desc_206">Potentially hazardous hot food</string>
    <string name="short_desc_208">Unapproved food sources</string>
    <string name="short_desc_209">Food not properly protected</string>
    <string name="short_desc_210">Food not thawed acceptably</string>
    <string name="short_desc_211">Potentially unsafe frozen food</string>
    <string name="short_desc_212">No written handling procedures</string>
    <string name="short_desc_301">Lacking sanitary maintenance</string>
    <string name="short_desc_302">Equipment not properly cleaned</string>
    <string name="short_desc_303">Lacking hot and cold water</string>
    <string name="short_desc_304">Premises not free of pests</string>
    <string name="short_desc_305">Possibility of increasing pests</string>
    <string name="short_desc_306">Food premises not sanitary</string>
    <string name="short_desc_307">Unsuitable design/material</string>
    <string name="short_desc_308">Equipment works poorly</string>
    <string name="short_desc_309">Chemicals labeled improperly</string>
    <string name="short_desc_310">Single-uses used more than once</string>
    <string name="short_desc_311">Premises not maintained to plan</string>
    <string name="short_desc_312">Unnecessary items on premises</string>
    <string name="short_desc_313">Live animal on premises</string>
    <string name="short_desc_314">No written sanitation rules</string>
    <string name="short_desc_315">Lacking accurate thermometers</string>
    <string name="short_desc_401">No adequate handwashing stations</string>
    <string name="short_desc_402">Employee washing hands poorly</string>
    <string name="short_desc_403">Employee has poor hygiene</string>
    <string name="short_desc_404">Employee smoking in work areas</string>
    <string name="short_desc_501">Operator lacks FOODSAFE Level 1</string>
    <string name="short_desc_502">Employees lack FOODSAFE Level 1</string>
    <string name="title_activity_maps">Health Inspection Report Finder</string>
    <string name="to_restaurant_list">To Restaurant List</string>
    <string name="not_connected">You\'re not connected to the Internet, application features may be limited.</string>
    <string name="to_maps">To Maps</string>
    <string name="to_list">To List</string>
    <string name="processing">Processing</string>
    <string name="downloading_update">Downloading Update...</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="new_data_found">New Data Found!</string>
    <string name="would_you_like_to_download_update">Would you like to download updated restaurant/inspection data?</string>
    <string name="error_saving_data">Sorry, there was an error saving the updated data.</string>
    <string name="search">Search</string>
    <string name="restaurant_name">Restaurant Name:</string>
    <string name="most_recent_hazard_level">Most Recent Hazard Level:</string>
    <string name="low_abbr">Low</string>
    <string name="moderate_abbr">Med.</string>
    <string name="high_abbr">High</string>
    <string name="number_of_critical_violations"># Critical Violations in Last Year:</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="lessthan_n_lessthan">≤ n ≤</string>
    <string name="only_show_favourites">Only show favourites</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="new_reports_for_your_favourite_restaurants">New reports for your favourite restaurants:</string>
    <string name="map_snippet">%1$s, Hazard: %2$s</string>
</resources>
